[package]
name = "excelize-rs"
version = "0.1.9"
edition = "2024"
description = "Rust language library for reading and writing Microsoft Excel (XLAM / XLSM / XLSX / XLTM / XLTX) spreadsheets"
license = "BSD-3-Clause"
repository = "https://github.com/sushiduli/excelize-rs"
homepage = "https://github.com/sushiduli/excelize-rs"
readme = "README.md"
keywords = ["excel", "xlsx", "spreadsheet", "office", "vba"]
categories = ["data-structures", "encoding", "parser-implementations"]

[dependencies]
zip = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = "0.4"
num-complex = "0.4"
regex = "1.11"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
md4 = "0.10"
ripemd = "0.1"
libm = "0.2"
statrs = "0.18"
digest = "0.10"
aes = "0.8"
cfb = "0.10"
rand = "0.8"
dashmap = "6.1"
image = "0.25"
